Fixed menu gap and letter spacing
Fixed menu gap and letter spacing to match website design given

--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -14,7 +14,7 @@ header {
 .header_menu {
     padding-top: 32px;
     display: flex;
-    gap: 30px; 
+    gap: 20px; 
     list-style: none;
 }
   
@@ -50,6 +50,7 @@ header {
 }
 
 .header_menu li a {
+    letter-spacing: 3px;
     color: var(--chou-purple);
     transition: color 0.2s ease;
 }
